--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
 </div>
 
     <div id="memory-container">
-        <p id = "line0">
-            0 0 0 0 0 0 0 0
-        </p>
-
+        <div id="line0">
+            00000000 00 00 00 00 00 00 00 00 ........
+        </div>
+        <div id="line1">
+            00000008 00 00 00 00 00 00 00 00 ........
+        </div>
+        <div id="line2">
+            00000016 00 00 00 00 00 00 00 00 ........
+        </div>
     </div>
     </div>
 
