--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
 </head>
 <body>
 
+
+
+    <div id = "editorContainer">
+        <textarea id="editor" rows="4" cols="50" spellcheck="false">
+WOW WOW WOW WOW WOW WOW WOW WOW WOw woW WOW WOW WOW WOW WOW WOW 
+WOW WOW WOW woW WOW WOW WOW WOW WOW WOW WOW WOW WOW WOW WOW WOW 
+WOW woW WOW WOW WOW WOW woW WOW WOW WOW WOW WOW WOW WOW WOW WOW 
+WOW WOW Wow Wow Wow Wow wow wOW woW WoW woW woow wow wow wow WoW 
+w0w WOOW WOW WOW WOW WOW WoW WoW WOW WOW WOW woow WoW woW WoW woW 
+wow WoW woW WOOW WoW WOW WOW WOW WOW WOW WOW WOW WOW WoW woW WOOW 
+WOW WOW WOW WoW woW WOOW wow wow wow WoW wow wow wow wow wow wow 
+wow wow WoW Wow Wow Wow Wow WOW WoW
+        </textarea>
+    </div>
+
 <div>
     Delay
   <input id="delay" type="range" min="1" max="10" value="5">
@@ -33,18 +48,7 @@
     </div>
     </div>
 
-    <div>
-        <textarea id="editor" rows="4" cols="50">
-WOW WOW WOW WOW WOW WOW WOW WOW WOw woW WOW WOW WOW WOW WOW WOW 
-WOW WOW WOW woW WOW WOW WOW WOW WOW WOW WOW WOW WOW WOW WOW WOW 
-WOW woW WOW WOW WOW WOW woW WOW WOW WOW WOW WOW WOW WOW WOW WOW 
-WOW WOW Wow Wow Wow Wow wow wOW woW WoW woW woow wow wow wow WoW 
-w0w WOOW WOW WOW WOW WOW WoW WoW WOW WOW WOW woow WoW woW WoW woW 
-wow WoW woW WOOW WoW WOW WOW WOW WOW WOW WOW WOW WOW WoW woW WOOW 
-WOW WOW WOW WoW woW WOOW wow wow wow WoW wow wow wow wow wow wow 
-wow wow WoW Wow Wow Wow Wow WOW WoW
-        </textarea>
-    </div>
+
 
     <button id="interpret" type="button">Interpret</button>
 
