--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>WOWlang Visualizer</title>
-    <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/codemirror.css">
+    <link rel="stylesheet" href="css/blackboard.css">
+    <link rel="stylesheet" href="css/index.css" />
 
     <script
   src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -12,6 +13,7 @@
     <script src="js/interpreter.js"></script>
     <script src="js/codemirror.js"></script>
     <script src="js/brainfuck.js"></script>
+    <script src="js/mark-selection.js"></script>
 </head>
 <body>
 
