--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <title>WOWlang Visualizer</title>
-    <link rel="stylesheet" href="css/codemirror.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.3/codemirror.min.css">
     <link rel="stylesheet" href="css/blackboard.css">
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/code-highlighting.css" />
 
     <script
   src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
   integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
   crossorigin="anonymous"></script>
     <script src="js/interpreter.js"></script>
-    <script src="js/codemirror.js"></script>
-    <script src="js/brainfuck.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.3/codemirror.min.js"></script>
     <script src="js/mark-selection.js"></script>
 </head>
 <body>
