--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
 
     <div id="controlContainer">
         <div id="inputContainer" class="container">
+            <div id="commands" class="row mb-5">
+                <div id="commandsHeader" class="mb-3">Commands</div>
+                <div class="col-md-6">
+                    <code>WOW</code>: Increment value<br>
+                    <code>wow</code>: Decrement value<br>
+                    <code>woW</code>: Move register pointer to right<br>
+                    <code>Wow</code>: Move register pointer to left<br>
+                    <code>wOw</code>: Read input value to register<br>
+                    <code>WoW</code>: Output current register value
+                </div>
+                <div class="col-md-6">
+                    <code>WOw</code>: Open loop<br>
+                    <code>woW</code>: Close loop<br>
+                    <code>woow</code>: Add value from register to pointer position<br>
+                    <code>WOOW</code>: Copy value from register<br>
+                    <code>w0w</code>: Reset register value
+                </div>
+            </div>
+
             <div class="row mb-3">
                 <div class="col-md-6">
                     <label for="delayRange" class="form-label">Delay</label>
