added styling to commands panel

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
 
     <div id="controlContainer">
         <div id="inputContainer" class="container">
-            <div id="commands" class="row mb-5">
-                <div id="commandsHeader" class="mb-3">Commands</div>
+            <div id="commands" class="row mb-5 p-3 border border-primary rounded">
+                <h4 id="commandsHeader" class="mb-3">Commands</h4>
                 <div class="col-md-6">
                     <code>WOW</code>: Increment value<br>
                     <code>wow</code>: Decrement value<br>
