--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
             <div class="row mb-5">
                 <div class="col-md-3">
                     <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" id="SoundSwitch" checked>
-                        <label class="form-check-label" for="SoundSwitch">Play Sound</label>
+                        <input class="form-check-input" type="checkbox" id="soundSwitch" checked>
+                        <label class="form-check-label" for="soundSwitch">Play Sound</label>
                       </div>
                 </div>
                 <div class="col-md-1 offset-md-4">
