--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
                 </div>
             </div>
             
-            <div class="row mb-5">
+            <div class="row mb-3">
                 <div class="col-md-3">
                     <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" id="soundSwitch" checked>
@@ -92,9 +92,12 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
                     <button type="button" id="" class="btn btn-secondary control-button"><i class="bi bi-skip-forward-fill"></i></button>
                 </div>
             </div>
-
+            <hr/>
             <div class="row">
-                <div>
+                <div class="col-md-4">
+                    <img id="owenWilsonFace" src="img/owen_wilson_closed_mouth.png">
+                </div>
+                <div class="col-md-8">
                     <label for="output">Output</label>
                     <textarea class="form-control" id="output" rows="4" cols="50"></textarea>
                 </div>
