implemented stop functionality

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
                     <button type="button" id="" class="btn btn-secondary control-button"><i class="bi bi-pause-fill"></i></button>
                 </div>
                 <div class="col-md-1">
-                    <button type="button" id="" class="btn btn-secondary control-button"><i class="bi bi-stop-fill"></i></button>
+                    <button type="button" id="stopButton" class="btn btn-secondary control-button"><i class="bi bi-stop-fill"></i></button>
                 </div>
                 <div class="col-md-1">
                     <button type="button" id="" class="btn btn-secondary control-button"><i class="bi bi-skip-forward-fill"></i></button>
