updated command descriptions

--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
             <div id="commands" class="row">
                 <h4 id="commandsHeader" class="mb-3">Commands</h4>
                 <div class="col-md-6">
-                    <code>WOW</code>: Increment value<br>
-                    <code>wow</code>: Decrement value<br>
-                    <code>woW</code>: Move register pointer to right<br>
-                    <code>Wow</code>: Move register pointer to left<br>
+                    <code>WOW</code>: Increment memory value<br>
+                    <code>wow</code>: Decrement memory value<br>
+                    <code>woW</code>: Move memory pointer to right<br>
+                    <code>Wow</code>: Move memory pointer to left<br>
                     <code>wOw</code>: Read input value to the current memory position<br>
-                    <code>WoW</code>: Output current memory position value
+                    <code>WoW</code>: Output current memory value
                 </div>
                 <div class="col-md-6">
                     <code>WOw</code>: Open loop<br>
-                    <code>woW</code>: Close loop<br>
-                    <code>woow</code>: Add value from register to pointer position<br>
+                    <code>woW</code>: Close loop (loop is terminated if memory value at pointer is 0)<br>
+                    <code>woow</code>: Add value from register to memory at pointer position<br>
                     <code>WOOW</code>: Copy value from register<br>
                     <code>w0w</code>: Reset register value
                 </div>
