updated command descriptions

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
                 <div class="col-md-6">
                     <code>WOw</code>: Open loop<br>
                     <code>woW</code>: Close loop (loop is terminated if memory value at pointer is 0)<br>
-                    <code>woow</code>: Add value from register to memory at pointer position<br>
+                    <code>woow</code>: Add value from register to memory<br>
                     <code>WOOW</code>: Copy value from register<br>
                     <code>w0w</code>: Reset register value
                 </div>
