--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
         <div id="memory-container" class="bg-light">
             <div class="row">
                 <div class="col-md-8">
-                    <select class="form-select" >
+                    <select class="form-select" id="cell-value-type">
                         <option value="hex">HEX</option>
                         <option value="dec">DEC</option>
-                      </select>
+                    </select>
                 </div>
                 <div class="col-md-4">
                     <div id="registerContainer">
@@ -120,19 +120,7 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
                     </div>
                 </div>
             </div>
-<!--     
-            <div id="line0">
-                00000000 00 00 00 00 00 00 00 00 ........
-            </div>
-    
-            <div id="line1">
-                00000008 00 00 00 00 00 00 00 00 ........
-            </div>
-    
-            <div id="line2">
-                00000016 00 00 00 00 00 00 00 00 ........
-            </div> -->
-<!-- 
+
             <table class="table" id="memory-display">
                 <thead>
                     <tr>
@@ -149,65 +137,7 @@ wow wow WoW Wow Wow Wow Wow WOW WoW
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>00000000</td>
-                        <td data-toggle="tooltip" data-placement="top" title="0x00000001">00</td>
-                        <td data-toggle="tooltip" data-placement="top" title="0x00000002">00</td>
-                        <td data-toggle="tooltip" data-placement="top" title="0x00000003">00</td>
-                        <td>00</td>
-
-                        <td>00</td>
-                        <td>00</td>
-                        <td>00</td>
-                        <td>00</td>
-                        <td>........</td>
-                    </tr>
-                    <tr>
-                        <td>00000008</td>
-                        <td>00</td>
-                        <td>00</td>
-                        <td>00</td>
-                        <td>00</td>
-
-                        <td>00</td>
-                        <td>00</td>
-                        <td>00</td>
-                        <td>00</td>
-                        <td>........</td>
-                    </tr>
-
-                    <tr>
-                        <td>00000016</td>
-                        <td alt="Exmaple">00</td>
-                        <td>00</td>
-                        <td>00</td>
-                        <td>00</td>
-
-                        <td>00</td>
-                        <td>00</td>
-                        <td>00</td>
-                        <td>00</td>
-                        <td>........</td>
-                    </tr>
-                </tbody>
-            </table> -->
-            <table class="table" id="memory-display">
-                <thead>
-                    <tr>
-                    <th scope="col">0x</th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col">Ascii</th>
-                    </tr>
-                </thead>
-                <tbody>
-
+                    <!-- populated from js/memory-display/memory-display.js -->
                 </tbody>
             </table>
         </div>
